# frixia

./: .gitignore  CMakeLists.txt  CMakeLists.txt_library  README.md  frixia.c  main.c  main_old.c  main_old_2.c
docs/usage/c_documentation/: CMakeLists.txt  build.sh  main.c  main2
src/: frixia.c  (+2 more)
src/core/: .frixia.swp  CMakeLists.txt  frixia.c  frixia.h  frixia.hpp  frixia_codes.h  frixia_common.c  frixia_common.h  frixia_fd_ds.h  frixia_h.c  frixia_h.h
src/core/callback_suite/: CMakeLists.txt  frixia_callback_main_function.c  frixia_callback_main_function.h  frixia_cb_data.c  frixia_cb_data.h  frixia_cb_hashmap.c  frixia_cb_hashmap.h
src/core/callback_suite/callback_data/: CMakeLists.txt  callback_data.c  callback_data.h  callback_data_structure.c  callback_data_structure.h  callbacks_data_structure.c  callbacks_data_structure.h  frixia_callback_context.c  frixia_callback_context.h  frixia_callback_entry.c  frixia_callback_entry.h  frixia_callbacks.c  frixia_callbacks.h  frixia_fins_key.c  frixia_fins_key.h  frixia_http_key.c  frixia_http_key.h  hashed_callback.c  hashed_callback.h
src/core/callback_suite/callbacks/: CMakeLists.txt
src/core/callback_suite/hashmap/: hash_entry.c  hash_entry.h  hash_map.c  hash_map.h
src/core/cb_data_structure/: CMakeLists.txt  frixia_cb_data.h  frixia_cb_hashmap.h
src/core/cb_data_structure/hashmap/: CMakeLists.txt  hash_entry.c  hash_entry.h  hash_map.c  hash_map.h
src/core/convoy/: CMakeLists.txt  convoy.c  convoy.h  fd.h  frixia_callback.c  frixia_callback.h  frixia_fd_args.c  frixia_fd_args.h
src/core/convoy_data_structure/: CMakeLists.txt  convoy.c  convoy.h  fd.h  frixia_fd_args.c  frixia_fd_args.h
src/core/crono/: CMakeLists.txt  crono.c  crono.h  detached_start_scheduler.c  detached_start_scheduler.h
src/core/ctl_parser/: CMakeLists.txt  control_commands.c  control_commands.h  control_strings_parser.c  control_strings_parser.h
src/core/fcontexts/: CMakeLists.txt  event_context.h  fctx.h  fdispatcher_ctx.c  fdispatcher_ctx.h  fepoll_ctx.c  fepoll_ctx.h  fevent_ctx.c  fevent_ctx.h
src/core/fd_pool/: CMakeLists.txt  filedescriptor_pool.c  filedescriptor_pool.h  filedescriptor_pool_defs.c  filedescriptor_pool_defs.h
src/core/fdispatcher/: CMakeLists.txt  detached_frixia_dispatcher.c  detached_frixia_dispatcher.h  detached_frixia_dispatcher_new.c  detached_frixia_dispatcher_new.h  frixia_dispatcher.c  frixia_dispatcher.h  frixia_dispatcher_handler.c  frixia_dispatcher_handler.h  frixia_dispatcher_loop_function.c  frixia_dispatcher_loop_function.h
src/core/fenv/: CMakeLists.txt  frixia_environment.c  frixia_environment.h
src/core/fevent/: CMakeLists.txt  frixia_event.c  frixia_event.h  frixia_events_queue.c  frixia_events_queue.h
src/core/filedescriptor/: CMakeLists.txt
src/core/filedescriptor/fd_monitor/: CMakeLists.txt  detached_epoll_monitor.c  detached_epoll_monitor.h
src/core/filedescriptor/reader/: CMakeLists.txt  filedescriptor_reader.c  filedescriptor_reader.h
src/core/filedescriptor/starter/: CMakeLists.txt  frixia_starter.c  frixia_starter.h
src/core/filedescriptor/types/: CMakeLists.txt
src/core/fqueue/: CMakeLists.txt  frixia_queue.c  frixia_queue.h
src/core/fsuite/: CMakeLists.txt  frixia_fd.c  frixia_fd.h  frixia_suite.c  frixia_suite.h
src/core/fthread_pool/: CMakeLists.txt  frixia_thread_pool.c  frixia_thread_pool.h  frixia_thread_pool_data.c  frixia_thread_pool_data.h
src/core/protocols/: CMakeLists.txt  frixia_supported_protocols.c  frixia_supported_protocols.h
src/core/protocols/fins/: CMakeLists.txt  frixia_fins.c  frixia_fins.h  frixia_fins_message.h
src/core/protocols/http/: CMakeLists.txt  frixia_http_parser.c  frixia_http_parser.h
src/core/setup/: CMakeLists.txt
src/core/setup/proto_callbacks/: CMakeLists.txt  proto_callbacks_queue.c  proto_callbacks_queue.h  proto_cb.c  proto_cb.h
src/core/setup/proto_filedescriptor/: CMakeLists.txt  proto_fds.c  proto_fds.h  proto_fds_queue.c  proto_fds_queue.h
src/core/thread_pool/: CMakeLists.txt  fthread_pool.c  fthread_pool.h
src/core/thread_pool/bound_robin/: CMakeLists.txt  bound_robin.c  bound_robin.h  bound_robin_event.c  bound_robin_event.h  bound_robin_thread.c  bound_robin_thread.h
src/core/thread_pool/shinsu_senju/: CMakeLists.txt  detached_shinsu_senju.c  detached_shinsu_senju.h  ss_pool.c  ss_pool.h  ss_wrapper_function.c  (+1 more)
src/fdispatcher/dispatcher/: CMakeLists.txt  detached_frixia_dispatcher_new.c  frixia_dispatcher.c  frixia_dispatcher.h  frixia_dispatcher_loop_function.c  frixia_dispatcher_loop_function.h
src/setup/proto_callbacks/: CMakeLists.txt  proto_callback_element.c  proto_callback_element.h  proto_callbacks_queue.c  proto_callbacks_queue.h  proto_cb.c  proto_cb.h
src/utils/: CMakeLists.txt  network.c  simple_hash_entry.c  simple_hash_map.c  simple_hashing_utility.h  simple_list.c  simple_queue.c  simple_valid_callback.c  threadsafe_simple_queue copy.c
src/utils/datastructures/: CMakeLists.txt
src/utils/finite_state_machines/: CMakeLists.txt  fsm.c  fsm.h  fsm_common.h
src/utils/include/: threadsafe_simple_queue.h
src/utils/networking/: CMakeLists.txt  network.c  network.h
src/utils/src/: network.c  simple_hash_entry.h  simple_hash_map.h  simple_list_elem.c  simple_queue.c  simple_valid_callback.c  threadsafe_simple_queue.c
src/utils/valid_callback/: CMakeLists.txt  simple_valid_callback.c  simple_valid_callback.h
test/filedescriptors/signal/: CMakeLists.txt  test_linux.c  test_signal.c
test/filedescriptors/tcp/: CMakeLists.txt  test_close.c  test_http.c  test_read.c  test_tcp.c  test_termination.c
test/filedescriptors/udp/: CMakeLists.txt  test_termination.c
test/hash_map/: CMakeLists.txt  test_hash_map.c  test_hash_map_functions.c  test_hash_map_strings.c
test/parser/ctl_parse/: CMakeLists.txt  test_ctl_commands.c  test_ctl_commands2.c
test/simple_list/: CMakeLists.txt  test_simple_list.c  test_simple_list_next.c  test_simple_list_previous.c  test_simple_list_remove.c  test_simple_list_sizes.c
test/simple_networking/: CMakeLists.txt  test_bads_ips.c  test_goods_ips.c
(+393 files in other folders)
