add_library(core
  frixia_h.c
  frixia_h.h
  frixia_common.h
  frixia_common.c 
)

add_subdirectory(ctl_parser)
add_subdirectory(fd_pool)
add_subdirectory(fqueue)
add_subdirectory(thread_pool)
add_subdirectory(fevent)
add_subdirectory(protocols)
add_subdirectory(callback_suite)
add_subdirectory(filedescriptor)
add_subdirectory(fsuite)
add_subdirectory(fdispatcher)
add_subdirectory(fthread_pool)
add_subdirectory(convoy)
add_subdirectory(crono)
add_subdirectory(fenv)
add_subdirectory(fcontexts)

target_link_libraries(core 
  ctl_parser
  fd_pool
  fqueue
  thread_pool
  proto_callbacks
  proto_filedescriptor
  protocols
  picohttpparser
  fsetup
  simple_list
  fsuite
  threadsafe_simple_queue
  fdispatcher
  fthread_pool
  convoy
  crono
  inode
  bound_robin
  callback_suite
  fenv
  frixia_monitor
  frixia_contexts
)