add_library(fepoll
    fepoll.c
    fepoll.h
    fepoll_codes.h
    fepoll_defs.h
    epoll.c
    epoll.h
    fepoll_pool.c
    fepoll_pool.h
    fepoll_pool_data.c
    fepoll_pool_data.h
    fepoll_loop_function.h
    fepoll_loop_function.c
)

target_link_libraries(fepoll
    simple_list
    fevent
    tcp
    fifo
    udp
    timer
    eventfd
)